@startuml PatientTravelPortal

skin rose
skinparam Style StrictUML
skinparam LineType ortho
skinparam monochrome true

' Tables
class Patient {
    * patientNhi : VARCHAR(7) <<PK>>
--
    + ntaNumber : SERIAL
    + firstName : VARCHAR(30)
    + otherGivenNames : VARCHAR(30)
    + surname : VARCHAR(30)
    + streetAddress: VARCHAR(500)
    + postalAddress: VARCHAR(500)
    + communityServiceCardNumber : VARCHAR(40)
    + communityServicesCardExpiry : DATE
    + dateOfBirth : DATE
    + phoneNumber : VARCHAR(10)
    + email : VARCHAR(50)
    + letter : BOOLEAN
    + accommodationEligibility : BOOLEAN
    + firstSupportPerson : BOOLEAN
    + firstSupportPersonReason : VARCHAR(300)
    + secondSupportPerson : BOOLEAN
    + secondSupportPersonReason : VARCHAR(300)
}

class ServiceProvider {
    * id : SERIAL <<PK>>
--
    + name : VARCHAR(50)
    + serviceProviderId : INT <<FK>>
}

class Frequency {
    * id : SERIAL <<PK>>
--
    + name : VARCHAR(15)
    + serviceProviderId : INT <<FK>>
}

class Transport {
    * id : SERIAL <<PK>>
--
    + name : VARCHAR(30)
}


class Accommodation {
    * id : SERIAL <<PK>> 
--
    + reason : VARCHAR(10)
}

' Associative entity - Patient-ServiceProvider
class PatientServiceProvider {
    * patientNhi : VARCHAR(7) <<FK>>
    * serviceProviderId : INT <<FK>>
}

' Associative Entity - ServiceProviderTransport

class ServiceProviderTransport {
    * serviceProviderId : INT <<FK>>
    * transportId: INT <<FK>>
--
    + reason VARCHAR(20)
}


' Relationships
Patient ||---o{ PatientServiceProvider
ServiceProvider ||---o{ PatientServiceProvider
ServiceProvider ||--o{ ServiceProviderTransport
ServiceProviderTransport ||--o{ Transport
ServiceProvider ||--o{ Frequency
ServiceProvider |o--o| Accommodation

@enduml
